[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "context-window-doctor"
version = "0.1.1"
description = "Find duplicate, conflicting, and stale instructions in long context files."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "alexzhu0" }]
keywords = ["ai-tools", "context-engineering", "prompt-engineering", "agents", "cli", "llmops"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development"
]

[project.scripts]
context-window-doctor = "context_window_doctor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
